--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
       <a href="images/logo springkastelen.jpg" class="logo">
         <div class="logo-text">
           <span class="logo-naam">Glenn's Spring &amp; Fun Verhuur</span>
-          <span class="logo-sub">Springkastelen</span>
         </div>
       </a>
 
       <nav class="nav">
         <a href="#springkastelen">Springkastelen</a>
-        <a href="#voordelen">Waarom Wij</a>
         <a href="#offerte">Offerte</a>
       </nav>
 
       <div class="header-rechts">
-        <a href="tel:+32123456789" class="header-telefoon">+32 472 02 78 87</a>
+        <a href="tel:+32472027887" class="header-telefoon">+32 472 02 78 87</a>
         <a href="#offerte" class="btn btn-primary">Offerte Aanvragen</a>
       </div>
 
@@ -40,7 +38,7 @@
       <a href="#springkastelen" onclick="document.getElementById('mobielMenu').classList.remove('open')">Springkastelen</a>
       <a href="#voordelen" onclick="document.getElementById('mobielMenu').classList.remove('open')">Waarom Wij</a>
       <a href="#offerte" onclick="document.getElementById('mobielMenu').classList.remove('open')">Offerte</a>
-      <a href="tel:+32123456789">+32 472 02 78 87</a>
+      <a href="tel:+32472027887">+32 472 02 78 87</a>
       <a href="#offerte" class="btn btn-primary" onclick="document.getElementById('mobielMenu').classList.remove('open')">Offerte Aanvragen</a>
     </div>
   </header>
@@ -189,8 +187,9 @@
           <span>Weekend vanaf &euro;160</span>
         </div>
         <div class="offerte-extra">
-          <span>Inclusief levering binnen 15km</span>
-          <span>Slecht weer garantie</span>
+          <span>Levering en plaatsing inbegrepen binnen 25km rondom Beerse</span>
+          <span>+25km mogelijk mits €0,30 per extra km</span>
+          <span>Slecht weer garantie inbegrepen</span>
         </div>
       </div>
 
@@ -267,7 +266,7 @@
             </div>
             <div>
               <div class="contact-label">Telefoon</div>
-              <div class="contact-waarde"><a href="tel:+32123456789">+32 123 45 67 89</a></div>
+              <div class="contact-waarde"><a href="tel:+32472027887">+32 472 02 78 87</a></div>
             </div>
           </div>
         </div>
@@ -283,11 +282,9 @@
     <div class="container">
       <div class="footer-grid">
         <div>
-          <a href="#" class="logo">
-            <div class="logo-icon">FJ</div>
+          <a href="images/logo springkastelen.jpg" class="logo">
             <div class="logo-text">
               <span class="logo-naam">Glenn's Spring & Fun Verhuur</span>
-              <span class="logo-sub">Springkastelen</span>
             </div>
           </a>
           <p class="footer-beschrijving">Uw betrouwbare partner voor de verhuur van springkastelen. Plezier gegarandeerd bij elk evenement!</p>
@@ -315,7 +312,7 @@
           <ul class="footer-contact">
             <li>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
-              <a href="tel:+32123456789">+32 123 45 67 89</a>
+              <a href="tel:+32472027887">+32 472 02 78 87</a>
             </li>
             <li>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
@@ -323,7 +320,7 @@
             </li>
             <li>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
-              Voorbeeldstraat 123, 8500 Kortrijk
+              Rijkevorselseweg 18, Beerse<br>BTW-nummer: 1032236980
             </li>
           </ul>
         </div>
