--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <link rel="icon" href="images/logo springkastelen.jpg" type="icon">
-    <link rel="stylesheet" href="stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage</title>
+  <link rel="icon" href="images/logo springkastelen.jpg" type="icon">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
-<!-- ============================================
+  <!-- ============================================
        HEADER
        Pas aan: logo tekst, telefoonnummer, links
        ============================================ -->
@@ -30,17 +32,20 @@
         <a href="#offerte" class="btn btn-primary">Offerte Aanvragen</a>
       </div>
 
-      <button class="hamburger" onclick="document.getElementById('mobielMenu').classList.toggle('open')" aria-label="Menu openen">
+      <button class="hamburger" onclick="document.getElementById('mobielMenu').classList.toggle('open')"
+        aria-label="Menu openen">
         <span></span><span></span><span></span>
       </button>
     </div>
 
     <div id="mobielMenu" class="mobiel-menu">
-      <a href="#springkastelen" onclick="document.getElementById('mobielMenu').classList.remove('open')">Springkastelen</a>
+      <a href="#springkastelen"
+        onclick="document.getElementById('mobielMenu').classList.remove('open')">Springkastelen</a>
       <a href="#voordelen" onclick="document.getElementById('mobielMenu').classList.remove('open')">Waarom Wij</a>
       <a href="#offerte" onclick="document.getElementById('mobielMenu').classList.remove('open')">Offerte</a>
       <a href="tel:+32472027887">+32 472 02 78 87</a>
-      <a href="#offerte" class="btn btn-primary" onclick="document.getElementById('mobielMenu').classList.remove('open')">Offerte Aanvragen</a>
+      <a href="#offerte" class="btn btn-primary"
+        onclick="document.getElementById('mobielMenu').classList.remove('open')">Offerte Aanvragen</a>
     </div>
   </header>
 
@@ -52,7 +57,8 @@
     <div class="container">
       <div class="hero-tekst">
         <h1>Welkom bij Glenn's Spring &amp; Fun Verhuur</h1>
-        <p>Verhuur van springkastelen voor onvergetelijke feesten en evenementen. Veilig, proper en altijd plezier gegarandeerd!</p>
+        <p>Verhuur van springkastelen voor onvergetelijke feesten en evenementen. Veilig, proper en altijd plezier
+          gegarandeerd!</p>
         <div class="hero-knoppen">
           <a href="#offerte" class="btn btn-primary">Offerte Aanvragen</a>
           <a href="#springkastelen" class="btn btn-outline">Bekijk Springkastelen</a>
@@ -79,8 +85,9 @@
       <div class="voordelen-grid">
         <div class="voordeel-kaart">
           <div class="voordeel-icoon">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
             </svg>
           </div>
           <h3>Veiligheid Eerst</h3>
@@ -89,8 +96,10 @@
 
         <div class="voordeel-kaart">
           <div class="voordeel-icoon">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/>
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path
+                d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z" />
             </svg>
           </div>
           <h3>Hygiene &amp; Schoonmaak</h3>
@@ -99,12 +108,13 @@
 
         <div class="voordeel-kaart">
           <div class="voordeel-icoon">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 18V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2"/>
-              <path d="M15 18H9"/>
-              <path d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14"/>
-              <circle cx="17" cy="18" r="2"/>
-              <circle cx="7" cy="18" r="2"/>
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round">
+              <path d="M14 18V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v11a1 1 0 0 0 1 1h2" />
+              <path d="M15 18H9" />
+              <path d="M19 18h2a1 1 0 0 0 1-1v-3.65a1 1 0 0 0-.22-.624l-3.48-4.35A1 1 0 0 0 17.52 8H14" />
+              <circle cx="17" cy="18" r="2" />
+              <circle cx="7" cy="18" r="2" />
             </svg>
           </div>
           <h3>Levering &amp; Opstelling</h3>
@@ -113,10 +123,11 @@
 
         <div class="voordeel-kaart">
           <div class="voordeel-icoon">
-            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="12" cy="12" r="10"/>
-              <line x1="12" y1="8" x2="12" y2="12"/>
-              <line x1="12" y1="16" x2="12.01" y2="16"/>
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round">
+              <circle cx="12" cy="12" r="10" />
+              <line x1="12" y1="8" x2="12" y2="12" />
+              <line x1="12" y1="16" x2="12.01" y2="16" />
             </svg>
           </div>
           <h3>Eerlijke Prijzen</h3>
@@ -137,66 +148,7 @@
         <h2>Onze Springkastelen</h2>
         <p>Ontdek onze geweldige collectie springkastelen, perfect voor elk feest!</p>
       </div>
-
-      <div class="kastelen-grid">
-        <!-- SPRINGKASTEEL 1 -->
-        <div class="kasteel-kaart">
-          <div class="kasteel-foto">
-            <img src="images/Brandweer_springkasteel.jpg" alt="Brandweer Springkasteel">
-          </div>
-          <div class="kasteel-info">
-            <h3>Brandweer Springkasteel</h3>
-            <p>Leuk brandweerspringkasteel met een eigen brandweerwagen. Perfect voor kinderen die dromen van een avontuur!</p>
-            <ul class="kasteel-features">
-              <li>€110 per dag</li>
-              <li>Geschikt voor 10-12 kinderen</li>
-            </ul>
-          </div>
-        </div>
-<!-- SPRINGKASTEEL 2 -->
-        <div class="kasteel-kaart">
-          <div class="kasteel-foto">
-            <img src="images/panda_springkasteel.jpg" alt="Panda Springkasteel">
-          </div>
-          <div class="kasteel-info">
-            <h3>Panda Springkasteel</h3>
-            <p>Leuk springkasteel in panda thema. Perfect voor kinderen die dromen van een avontuur!</p>
-            <ul class="kasteel-features">
-              <li>€70 per dag</li>
-              <li>Geschikt voor kinderen van 1 tot 6 jaar</li>
-            </ul>
-          </div>
-        </div>
-
-        <!-- SPRINGKASTEEL 3 -->
-        <div class="kasteel-kaart">
-          <div class="kasteel-foto">
-            <img src="images/safari_springkasteel.jpg" alt="Safari Springkasteel">
-          </div>
-          <div class="kasteel-info">
-            <h3>Safari Springkasteel</h3>
-            <p>Avontuurlijk safari springkasteel voor grote groepen. Ideaal voor safari-feestjes!</p>
-            <ul class="kasteel-features">
-              <li>€100 per dag</li>
-              <li>Geschikt voor grote groepen, max 7 tot 10 kinderen</li>
-            </ul>
-          </div>
-        </div>
-<!-- SPRINGKASTEEL 4 -->
-        <div class="kasteel-kaart">
-          <div class="kasteel-foto">
-            <img src="images/vissen_springkasteel.jpg" alt="Vissen Springkasteel">
-          </div>
-          <div class="kasteel-info">
-            <h3>Vissen Springkasteel</h3>
-            <p>Leuk springkasteel in vissen thema. Perfect voor kinderen die dol zijn van vissen!</p>
-            <ul class="kasteel-features">
-              <li>€100 per dag</li>
-              <li>Geschikt voor kinderen van 1 tot 6 jaar</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+      <div class="kastelen-grid" id="kastelenGrid"></div>
     </div>
   </section>
 
@@ -279,12 +231,8 @@
             <div class="form-groep">
               <label for="springkasteel">Springkasteel *</label>
               <!-- VOEG HIER NIEUWE SPRINGKASTELEN TOE door meer <option> regels te kopieren -->
-              <select id="springkasteel" name="springkasteel" required>
-                <option value="" disabled selected>Selecteer springkasteel</option>
-                <option value="brandweer">Brandweer Springkasteel</option>
-                <option value="safari">Safari Springkasteel</option>
-                <option value="panda">Panda Springkasteel</option>
-               <option value="vissen">Vissen Springkasteel</option> 
+              <select id="springkasteelSelect" name="springkasteel" required>
+                <option value="">Selecteer springkasteel</option>
               </select>
             </div>
             <div class="form-groep">
@@ -299,20 +247,24 @@
           <p>Of neem direct contact met ons op:</p>
           <div class="contact-item">
             <div class="contact-icoon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <rect width="20" height="16" x="2" y="4" rx="2"/>
-                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <rect width="20" height="16" x="2" y="4" rx="2" />
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7" />
               </svg>
             </div>
             <div>
               <div class="contact-label">E-mail</div>
-              <div class="contact-waarde"><a href="mailto:Glenns-spring-fun-verhuur@hotmail.com">glenns-spring-en-fun-verhuur@hotmail.com</a></div>
+              <div class="contact-waarde"><a
+                  href="mailto:Glenns-spring-fun-verhuur@hotmail.com">glenns-spring-en-fun-verhuur@hotmail.com</a></div>
             </div>
           </div>
           <div class="contact-item">
             <div class="contact-icoon">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path
+                  d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
               </svg>
             </div>
             <div>
@@ -338,13 +290,21 @@
               <span class="logo-naam">Glenn's Spring & Fun Verhuur</span>
             </div>
           </a>
-          <p class="footer-beschrijving">Uw betrouwbare partner voor de verhuur van springkastelen. Plezier gegarandeerd bij elk evenement!</p>
+          <p class="footer-beschrijving">Uw betrouwbare partner voor de verhuur van springkastelen. Plezier gegarandeerd
+            bij elk evenement!</p>
           <div class="footer-socials">
             <a href="#" aria-label="Facebook">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+              </svg>
             </a>
             <a href="#" aria-label="Instagram">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+              </svg>
             </a>
           </div>
         </div>
@@ -362,15 +322,27 @@
           <h3>Contact</h3>
           <ul class="footer-contact">
             <li>
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path
+                  d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+              </svg>
               <a href="tel:+32472027887">+32 472 02 78 87</a>
             </li>
             <li>
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <rect width="20" height="16" x="2" y="4" rx="2" />
+                <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7" />
+              </svg>
               <a href="mailto:Glenns-spring-fun-verhuur@hotmail.com">Glenns-spring-fun-verhuur@hotmail.com</a>
             </li>
             <li>
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                <circle cx="12" cy="10" r="3" />
+              </svg>
               Rijkevorselseweg 18, Beerse<br>BTW-nummer: 1032236980
             </li>
           </ul>
@@ -386,5 +358,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/springkastelen.js"></script>
+</body>
 
 </html>
